ToyCompiler/parser.output
Terminals unused in grammar

   TDOT


状态 13 conflicts: 2 shift/reduce
状态 16 conflicts: 1 shift/reduce
状态 24 conflicts: 1 shift/reduce
状态 38 conflicts: 10 shift/reduce
状态 43 conflicts: 6 shift/reduce
状态 44 conflicts: 6 shift/reduce
状态 45 conflicts: 6 shift/reduce
状态 46 conflicts: 6 shift/reduce
状态 47 conflicts: 10 shift/reduce


语法

    0 $accept: program $end

    1 program: stmts

    2 stmts: stmt
    3      | stmts stmt

    4 stmt: var_decl
    5     | func_decl
    6     | extern_decl
    7     | expr
    8     | TRETURN expr

    9 block: TLBRACE stmts TRBRACE
   10      | TLBRACE TRBRACE

   11 var_decl: ident ident
   12         | ident ident TEQUAL expr

   13 extern_decl: TEXTERN ident ident TLPAREN func_decl_args TRPAREN

   14 func_decl: ident ident TLPAREN func_decl_args TRPAREN block

   15 func_decl_args: %empty
   16               | var_decl
   17               | func_decl_args TCOMMA var_decl

   18 ident: TIDENTIFIER

   19 numeric: TINTEGER
   20        | TDOUBLE

   21 expr: ident TEQUAL expr
   22     | ident TLPAREN call_args TRPAREN
   23     | ident
   24     | numeric
   25     | expr TMUL expr
   26     | expr TDIV expr
   27     | expr TPLUS expr
   28     | expr TMINUS expr
   29     | expr comparison expr
   30     | TLPAREN expr TRPAREN

   31 call_args: %empty
   32          | expr
   33          | call_args TCOMMA expr

   34 comparison: TCEQ
   35           | TCNE
   36           | TCLT
   37           | TCLE
   38           | TCGT
   39           | TCGE


Terminals, with rules where they appear

$end (0) 0
error (256)
TIDENTIFIER (258) 18
TINTEGER (259) 19
TDOUBLE (260) 20
TCEQ (261) 34
TCNE (262) 35
TCLT (263) 36
TCLE (264) 37
TCGT (265) 38
TCGE (266) 39
TEQUAL (267) 12 21
TLPAREN (268) 13 14 22 30
TRPAREN (269) 13 14 22 30
TLBRACE (270) 9 10
TRBRACE (271) 9 10
TCOMMA (272) 17 33
TDOT (273)
TPLUS (274) 27
TMINUS (275) 28
TMUL (276) 25
TDIV (277) 26
TRETURN (278) 8
TEXTERN (279) 13


Nonterminals, with rules where they appear

$accept (25)
    左： 0
program (26)
    左： 1, 右： 0
stmts (27)
    左： 2 3, 右： 1 3 9
stmt (28)
    左： 4 5 6 7 8, 右： 2 3
block (29)
    左： 9 10, 右： 14
var_decl (30)
    左： 11 12, 右： 4 16 17
extern_decl (31)
    左： 13, 右： 6
func_decl (32)
    左： 14, 右： 5
func_decl_args (33)
    左： 15 16 17, 右： 13 14 17
ident (34)
    左： 18, 右： 11 12 13 14 21 22 23
numeric (35)
    左： 19 20, 右： 24
expr (36)
    左： 21 22 23 24 25 26 27 28 29 30, 右： 7 8 12 21 25 26 27
    28 29 30 32 33
call_args (37)
    左： 31 32 33, 右： 22 33
comparison (38)
    左： 34 35 36 37 38 39, 右： 29


State 0

    0 $accept: . program $end

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TLPAREN      shift, and go to state 4
    TRETURN      shift, and go to state 5
    TEXTERN      shift, and go to state 6

    program      转到状态 7
    stmts        转到状态 8
    stmt         转到状态 9
    var_decl     转到状态 10
    extern_decl  转到状态 11
    func_decl    转到状态 12
    ident        转到状态 13
    numeric      转到状态 14
    expr         转到状态 15


State 1

   18 ident: TIDENTIFIER .

    $default  reduce using rule 18 (ident)


State 2

   19 numeric: TINTEGER .

    $default  reduce using rule 19 (numeric)


State 3

   20 numeric: TDOUBLE .

    $default  reduce using rule 20 (numeric)


State 4

   30 expr: TLPAREN . expr TRPAREN

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TLPAREN      shift, and go to state 4

    ident    转到状态 16
    numeric  转到状态 14
    expr     转到状态 17


State 5

    8 stmt: TRETURN . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TLPAREN      shift, and go to state 4

    ident    转到状态 16
    numeric  转到状态 14
    expr     转到状态 18


State 6

   13 extern_decl: TEXTERN . ident ident TLPAREN func_decl_args TRPAREN

    TIDENTIFIER  shift, and go to state 1

    ident  转到状态 19


State 7

    0 $accept: program . $end

    $end  shift, and go to state 20


State 8

    1 program: stmts .
    3 stmts: stmts . stmt

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TLPAREN      shift, and go to state 4
    TRETURN      shift, and go to state 5
    TEXTERN      shift, and go to state 6

    $default  reduce using rule 1 (program)

    stmt         转到状态 21
    var_decl     转到状态 10
    extern_decl  转到状态 11
    func_decl    转到状态 12
    ident        转到状态 13
    numeric      转到状态 14
    expr         转到状态 15


State 9

    2 stmts: stmt .

    $default  reduce using rule 2 (stmts)


State 10

    4 stmt: var_decl .

    $default  reduce using rule 4 (stmt)


State 11

    6 stmt: extern_decl .

    $default  reduce using rule 6 (stmt)


State 12

    5 stmt: func_decl .

    $default  reduce using rule 5 (stmt)


State 13

   11 var_decl: ident . ident
   12         | ident . ident TEQUAL expr
   14 func_decl: ident . ident TLPAREN func_decl_args TRPAREN block
   21 expr: ident . TEQUAL expr
   22     | ident . TLPAREN call_args TRPAREN
   23     | ident .

    TIDENTIFIER  shift, and go to state 1
    TEQUAL       shift, and go to state 22
    TLPAREN      shift, and go to state 23

    TIDENTIFIER  [reduce using rule 23 (expr)]
    TLPAREN      [reduce using rule 23 (expr)]
    $default     reduce using rule 23 (expr)

    ident  转到状态 24


State 14

   24 expr: numeric .

    $default  reduce using rule 24 (expr)


State 15

    7 stmt: expr .
   25 expr: expr . TMUL expr
   26     | expr . TDIV expr
   27     | expr . TPLUS expr
   28     | expr . TMINUS expr
   29     | expr . comparison expr

    TCEQ    shift, and go to state 25
    TCNE    shift, and go to state 26
    TCLT    shift, and go to state 27
    TCLE    shift, and go to state 28
    TCGT    shift, and go to state 29
    TCGE    shift, and go to state 30
    TPLUS   shift, and go to state 31
    TMINUS  shift, and go to state 32
    TMUL    shift, and go to state 33
    TDIV    shift, and go to state 34

    $default  reduce using rule 7 (stmt)

    comparison  转到状态 35


State 16

   21 expr: ident . TEQUAL expr
   22     | ident . TLPAREN call_args TRPAREN
   23     | ident .

    TEQUAL   shift, and go to state 22
    TLPAREN  shift, and go to state 23

    TLPAREN   [reduce using rule 23 (expr)]
    $default  reduce using rule 23 (expr)


State 17

   25 expr: expr . TMUL expr
   26     | expr . TDIV expr
   27     | expr . TPLUS expr
   28     | expr . TMINUS expr
   29     | expr . comparison expr
   30     | TLPAREN expr . TRPAREN

    TCEQ     shift, and go to state 25
    TCNE     shift, and go to state 26
    TCLT     shift, and go to state 27
    TCLE     shift, and go to state 28
    TCGT     shift, and go to state 29
    TCGE     shift, and go to state 30
    TRPAREN  shift, and go to state 36
    TPLUS    shift, and go to state 31
    TMINUS   shift, and go to state 32
    TMUL     shift, and go to state 33
    TDIV     shift, and go to state 34

    comparison  转到状态 35


State 18

    8 stmt: TRETURN expr .
   25 expr: expr . TMUL expr
   26     | expr . TDIV expr
   27     | expr . TPLUS expr
   28     | expr . TMINUS expr
   29     | expr . comparison expr

    TCEQ    shift, and go to state 25
    TCNE    shift, and go to state 26
    TCLT    shift, and go to state 27
    TCLE    shift, and go to state 28
    TCGT    shift, and go to state 29
    TCGE    shift, and go to state 30
    TPLUS   shift, and go to state 31
    TMINUS  shift, and go to state 32
    TMUL    shift, and go to state 33
    TDIV    shift, and go to state 34

    $default  reduce using rule 8 (stmt)

    comparison  转到状态 35


State 19

   13 extern_decl: TEXTERN ident . ident TLPAREN func_decl_args TRPAREN

    TIDENTIFIER  shift, and go to state 1

    ident  转到状态 37


State 20

    0 $accept: program $end .

    $default  接受


State 21

    3 stmts: stmts stmt .

    $default  reduce using rule 3 (stmts)


State 22

   21 expr: ident TEQUAL . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TLPAREN      shift, and go to state 4

    ident    转到状态 16
    numeric  转到状态 14
    expr     转到状态 38


State 23

   22 expr: ident TLPAREN . call_args TRPAREN

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TLPAREN      shift, and go to state 4

    $default  reduce using rule 31 (call_args)

    ident      转到状态 16
    numeric    转到状态 14
    expr       转到状态 39
    call_args  转到状态 40


State 24

   11 var_decl: ident ident .
   12         | ident ident . TEQUAL expr
   14 func_decl: ident ident . TLPAREN func_decl_args TRPAREN block

    TEQUAL   shift, and go to state 41
    TLPAREN  shift, and go to state 42

    TLPAREN   [reduce using rule 11 (var_decl)]
    $default  reduce using rule 11 (var_decl)


State 25

   34 comparison: TCEQ .

    $default  reduce using rule 34 (comparison)


State 26

   35 comparison: TCNE .

    $default  reduce using rule 35 (comparison)


State 27

   36 comparison: TCLT .

    $default  reduce using rule 36 (comparison)


State 28

   37 comparison: TCLE .

    $default  reduce using rule 37 (comparison)


State 29

   38 comparison: TCGT .

    $default  reduce using rule 38 (comparison)


State 30

   39 comparison: TCGE .

    $default  reduce using rule 39 (comparison)


State 31

   27 expr: expr TPLUS . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TLPAREN      shift, and go to state 4

    ident    转到状态 16
    numeric  转到状态 14
    expr     转到状态 43


State 32

   28 expr: expr TMINUS . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TLPAREN      shift, and go to state 4

    ident    转到状态 16
    numeric  转到状态 14
    expr     转到状态 44


State 33

   25 expr: expr TMUL . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TLPAREN      shift, and go to state 4

    ident    转到状态 16
    numeric  转到状态 14
    expr     转到状态 45


State 34

   26 expr: expr TDIV . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TLPAREN      shift, and go to state 4

    ident    转到状态 16
    numeric  转到状态 14
    expr     转到状态 46


State 35

   29 expr: expr comparison . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TLPAREN      shift, and go to state 4

    ident    转到状态 16
    numeric  转到状态 14
    expr     转到状态 47


State 36

   30 expr: TLPAREN expr TRPAREN .

    $default  reduce using rule 30 (expr)


State 37

   13 extern_decl: TEXTERN ident ident . TLPAREN func_decl_args TRPAREN

    TLPAREN  shift, and go to state 48


State 38

   21 expr: ident TEQUAL expr .
   25     | expr . TMUL expr
   26     | expr . TDIV expr
   27     | expr . TPLUS expr
   28     | expr . TMINUS expr
   29     | expr . comparison expr

    TCEQ    shift, and go to state 25
    TCNE    shift, and go to state 26
    TCLT    shift, and go to state 27
    TCLE    shift, and go to state 28
    TCGT    shift, and go to state 29
    TCGE    shift, and go to state 30
    TPLUS   shift, and go to state 31
    TMINUS  shift, and go to state 32
    TMUL    shift, and go to state 33
    TDIV    shift, and go to state 34

    TCEQ      [reduce using rule 21 (expr)]
    TCNE      [reduce using rule 21 (expr)]
    TCLT      [reduce using rule 21 (expr)]
    TCLE      [reduce using rule 21 (expr)]
    TCGT      [reduce using rule 21 (expr)]
    TCGE      [reduce using rule 21 (expr)]
    TPLUS     [reduce using rule 21 (expr)]
    TMINUS    [reduce using rule 21 (expr)]
    TMUL      [reduce using rule 21 (expr)]
    TDIV      [reduce using rule 21 (expr)]
    $default  reduce using rule 21 (expr)

    comparison  转到状态 35


State 39

   25 expr: expr . TMUL expr
   26     | expr . TDIV expr
   27     | expr . TPLUS expr
   28     | expr . TMINUS expr
   29     | expr . comparison expr
   32 call_args: expr .

    TCEQ    shift, and go to state 25
    TCNE    shift, and go to state 26
    TCLT    shift, and go to state 27
    TCLE    shift, and go to state 28
    TCGT    shift, and go to state 29
    TCGE    shift, and go to state 30
    TPLUS   shift, and go to state 31
    TMINUS  shift, and go to state 32
    TMUL    shift, and go to state 33
    TDIV    shift, and go to state 34

    $default  reduce using rule 32 (call_args)

    comparison  转到状态 35


State 40

   22 expr: ident TLPAREN call_args . TRPAREN
   33 call_args: call_args . TCOMMA expr

    TRPAREN  shift, and go to state 49
    TCOMMA   shift, and go to state 50


State 41

   12 var_decl: ident ident TEQUAL . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TLPAREN      shift, and go to state 4

    ident    转到状态 16
    numeric  转到状态 14
    expr     转到状态 51


State 42

   14 func_decl: ident ident TLPAREN . func_decl_args TRPAREN block

    TIDENTIFIER  shift, and go to state 1

    $default  reduce using rule 15 (func_decl_args)

    var_decl        转到状态 52
    func_decl_args  转到状态 53
    ident           转到状态 54


State 43

   25 expr: expr . TMUL expr
   26     | expr . TDIV expr
   27     | expr . TPLUS expr
   27     | expr TPLUS expr .
   28     | expr . TMINUS expr
   29     | expr . comparison expr

    TCEQ  shift, and go to state 25
    TCNE  shift, and go to state 26
    TCLT  shift, and go to state 27
    TCLE  shift, and go to state 28
    TCGT  shift, and go to state 29
    TCGE  shift, and go to state 30
    TMUL  shift, and go to state 33
    TDIV  shift, and go to state 34

    TCEQ      [reduce using rule 27 (expr)]
    TCNE      [reduce using rule 27 (expr)]
    TCLT      [reduce using rule 27 (expr)]
    TCLE      [reduce using rule 27 (expr)]
    TCGT      [reduce using rule 27 (expr)]
    TCGE      [reduce using rule 27 (expr)]
    $default  reduce using rule 27 (expr)

    comparison  转到状态 35


State 44

   25 expr: expr . TMUL expr
   26     | expr . TDIV expr
   27     | expr . TPLUS expr
   28     | expr . TMINUS expr
   28     | expr TMINUS expr .
   29     | expr . comparison expr

    TCEQ  shift, and go to state 25
    TCNE  shift, and go to state 26
    TCLT  shift, and go to state 27
    TCLE  shift, and go to state 28
    TCGT  shift, and go to state 29
    TCGE  shift, and go to state 30
    TMUL  shift, and go to state 33
    TDIV  shift, and go to state 34

    TCEQ      [reduce using rule 28 (expr)]
    TCNE      [reduce using rule 28 (expr)]
    TCLT      [reduce using rule 28 (expr)]
    TCLE      [reduce using rule 28 (expr)]
    TCGT      [reduce using rule 28 (expr)]
    TCGE      [reduce using rule 28 (expr)]
    $default  reduce using rule 28 (expr)

    comparison  转到状态 35


State 45

   25 expr: expr . TMUL expr
   25     | expr TMUL expr .
   26     | expr . TDIV expr
   27     | expr . TPLUS expr
   28     | expr . TMINUS expr
   29     | expr . comparison expr

    TCEQ  shift, and go to state 25
    TCNE  shift, and go to state 26
    TCLT  shift, and go to state 27
    TCLE  shift, and go to state 28
    TCGT  shift, and go to state 29
    TCGE  shift, and go to state 30

    TCEQ      [reduce using rule 25 (expr)]
    TCNE      [reduce using rule 25 (expr)]
    TCLT      [reduce using rule 25 (expr)]
    TCLE      [reduce using rule 25 (expr)]
    TCGT      [reduce using rule 25 (expr)]
    TCGE      [reduce using rule 25 (expr)]
    $default  reduce using rule 25 (expr)

    comparison  转到状态 35


State 46

   25 expr: expr . TMUL expr
   26     | expr . TDIV expr
   26     | expr TDIV expr .
   27     | expr . TPLUS expr
   28     | expr . TMINUS expr
   29     | expr . comparison expr

    TCEQ  shift, and go to state 25
    TCNE  shift, and go to state 26
    TCLT  shift, and go to state 27
    TCLE  shift, and go to state 28
    TCGT  shift, and go to state 29
    TCGE  shift, and go to state 30

    TCEQ      [reduce using rule 26 (expr)]
    TCNE      [reduce using rule 26 (expr)]
    TCLT      [reduce using rule 26 (expr)]
    TCLE      [reduce using rule 26 (expr)]
    TCGT      [reduce using rule 26 (expr)]
    TCGE      [reduce using rule 26 (expr)]
    $default  reduce using rule 26 (expr)

    comparison  转到状态 35


State 47

   25 expr: expr . TMUL expr
   26     | expr . TDIV expr
   27     | expr . TPLUS expr
   28     | expr . TMINUS expr
   29     | expr . comparison expr
   29     | expr comparison expr .

    TCEQ    shift, and go to state 25
    TCNE    shift, and go to state 26
    TCLT    shift, and go to state 27
    TCLE    shift, and go to state 28
    TCGT    shift, and go to state 29
    TCGE    shift, and go to state 30
    TPLUS   shift, and go to state 31
    TMINUS  shift, and go to state 32
    TMUL    shift, and go to state 33
    TDIV    shift, and go to state 34

    TCEQ      [reduce using rule 29 (expr)]
    TCNE      [reduce using rule 29 (expr)]
    TCLT      [reduce using rule 29 (expr)]
    TCLE      [reduce using rule 29 (expr)]
    TCGT      [reduce using rule 29 (expr)]
    TCGE      [reduce using rule 29 (expr)]
    TPLUS     [reduce using rule 29 (expr)]
    TMINUS    [reduce using rule 29 (expr)]
    TMUL      [reduce using rule 29 (expr)]
    TDIV      [reduce using rule 29 (expr)]
    $default  reduce using rule 29 (expr)

    comparison  转到状态 35


State 48

   13 extern_decl: TEXTERN ident ident TLPAREN . func_decl_args TRPAREN

    TIDENTIFIER  shift, and go to state 1

    $default  reduce using rule 15 (func_decl_args)

    var_decl        转到状态 52
    func_decl_args  转到状态 55
    ident           转到状态 54


State 49

   22 expr: ident TLPAREN call_args TRPAREN .

    $default  reduce using rule 22 (expr)


State 50

   33 call_args: call_args TCOMMA . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TLPAREN      shift, and go to state 4

    ident    转到状态 16
    numeric  转到状态 14
    expr     转到状态 56


State 51

   12 var_decl: ident ident TEQUAL expr .
   25 expr: expr . TMUL expr
   26     | expr . TDIV expr
   27     | expr . TPLUS expr
   28     | expr . TMINUS expr
   29     | expr . comparison expr

    TCEQ    shift, and go to state 25
    TCNE    shift, and go to state 26
    TCLT    shift, and go to state 27
    TCLE    shift, and go to state 28
    TCGT    shift, and go to state 29
    TCGE    shift, and go to state 30
    TPLUS   shift, and go to state 31
    TMINUS  shift, and go to state 32
    TMUL    shift, and go to state 33
    TDIV    shift, and go to state 34

    $default  reduce using rule 12 (var_decl)

    comparison  转到状态 35


State 52

   16 func_decl_args: var_decl .

    $default  reduce using rule 16 (func_decl_args)


State 53

   14 func_decl: ident ident TLPAREN func_decl_args . TRPAREN block
   17 func_decl_args: func_decl_args . TCOMMA var_decl

    TRPAREN  shift, and go to state 57
    TCOMMA   shift, and go to state 58


State 54

   11 var_decl: ident . ident
   12         | ident . ident TEQUAL expr

    TIDENTIFIER  shift, and go to state 1

    ident  转到状态 59


State 55

   13 extern_decl: TEXTERN ident ident TLPAREN func_decl_args . TRPAREN
   17 func_decl_args: func_decl_args . TCOMMA var_decl

    TRPAREN  shift, and go to state 60
    TCOMMA   shift, and go to state 58


State 56

   25 expr: expr . TMUL expr
   26     | expr . TDIV expr
   27     | expr . TPLUS expr
   28     | expr . TMINUS expr
   29     | expr . comparison expr
   33 call_args: call_args TCOMMA expr .

    TCEQ    shift, and go to state 25
    TCNE    shift, and go to state 26
    TCLT    shift, and go to state 27
    TCLE    shift, and go to state 28
    TCGT    shift, and go to state 29
    TCGE    shift, and go to state 30
    TPLUS   shift, and go to state 31
    TMINUS  shift, and go to state 32
    TMUL    shift, and go to state 33
    TDIV    shift, and go to state 34

    $default  reduce using rule 33 (call_args)

    comparison  转到状态 35


State 57

   14 func_decl: ident ident TLPAREN func_decl_args TRPAREN . block

    TLBRACE  shift, and go to state 61

    block  转到状态 62


State 58

   17 func_decl_args: func_decl_args TCOMMA . var_decl

    TIDENTIFIER  shift, and go to state 1

    var_decl  转到状态 63
    ident     转到状态 54


State 59

   11 var_decl: ident ident .
   12         | ident ident . TEQUAL expr

    TEQUAL  shift, and go to state 41

    $default  reduce using rule 11 (var_decl)


State 60

   13 extern_decl: TEXTERN ident ident TLPAREN func_decl_args TRPAREN .

    $default  reduce using rule 13 (extern_decl)


State 61

    9 block: TLBRACE . stmts TRBRACE
   10      | TLBRACE . TRBRACE

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TLPAREN      shift, and go to state 4
    TRBRACE      shift, and go to state 64
    TRETURN      shift, and go to state 5
    TEXTERN      shift, and go to state 6

    stmts        转到状态 65
    stmt         转到状态 9
    var_decl     转到状态 10
    extern_decl  转到状态 11
    func_decl    转到状态 12
    ident        转到状态 13
    numeric      转到状态 14
    expr         转到状态 15


State 62

   14 func_decl: ident ident TLPAREN func_decl_args TRPAREN block .

    $default  reduce using rule 14 (func_decl)


State 63

   17 func_decl_args: func_decl_args TCOMMA var_decl .

    $default  reduce using rule 17 (func_decl_args)


State 64

   10 block: TLBRACE TRBRACE .

    $default  reduce using rule 10 (block)


State 65

    3 stmts: stmts . stmt
    9 block: TLBRACE stmts . TRBRACE

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TLPAREN      shift, and go to state 4
    TRBRACE      shift, and go to state 66
    TRETURN      shift, and go to state 5
    TEXTERN      shift, and go to state 6

    stmt         转到状态 21
    var_decl     转到状态 10
    extern_decl  转到状态 11
    func_decl    转到状态 12
    ident        转到状态 13
    numeric      转到状态 14
    expr         转到状态 15


State 66

    9 block: TLBRACE stmts TRBRACE .

    $default  reduce using rule 9 (block)
